# duckdb-excel

./: CMakeLists.txt  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/excel/: excel_extension.cpp
src/excel/include/: excel_extension.hpp
src/excel/include/xlsx/: read_xlsx.hpp  string_table.hpp  xlsx_parts.hpp  xlsx_writer.hpp
src/excel/include/xlsx/parsers/: shared_strings_parser.hpp  stylesheet_parser.hpp  worksheet_parser.hpp
src/excel/xlsx/: copy_xlsx.cpp  read_xlsx.cpp  zip_file.cpp
test/data/xlsx/: columns_letter.xlsx  duckdb_excel_rep1.xlsx  non_sequential.xlsx  normalize_names_1.xlsx  phonetic.xlsx
test/sql/excel/xlsx/: cast_validity_reset.test  column_letter.test  duplicate_column_names.test  non_existing_sheet.test  phonetic_text.test  range.test  range_stop_at_empty.test  read_sparse.test  test_default_numformat.test  xlsx_normalize_names.test
